New configuration for DPP